Code review changes:
- Tests added to click Generate/Regenerate
- Backup codes sedction refactored to allow for Generate/Regenerate buttons
- Replace hardcoded Xpaths with translate calls

--- a/app/views/accounts/show.html.slim
+++ b/app/views/accounts/show.html.slim
@@ -60,9 +60,9 @@ h1.hide = t('titles.account')
 
   - if TwoFactorAuthentication::BackupCodePolicy.new(current_user).visible?
       = render 'account_item',
-        name: t('account.index.backup_codes'),
+        name: t('forms.backup_code.title'),
         content: content_tag(:em, @view_model.backup_codes_content),
-        action: @view_model.backup_codes_action_partial
+        action: @view_model.backup_codes_partial
 
 = render @view_model.pii_partial, decrypted_pii: @view_model.decrypted_pii
 
