--- a/app/views/user_mailer/new_device_sign_in.html.slim
+++ b/app/views/user_mailer/new_device_sign_in.html.slim
@@ -8,6 +8,13 @@ table.hr
     th
       | &nbsp;
 
-p == t('.help_html',
+p == t('.info_html',
         date: @login_date,
         location: @login_location)
+
+p == t('.help',
+      app: link_to(APP_NAME, Figaro.env.mailer_domain_name, class: 'gray'),
+      disavowal_link: link_to(t('.disavowal_link'),
+        event_disavowal_url(disavowal_token: @disavowal_token)),
+      help_link: link_to(t('user_mailer.help_link_text'), MarketingSite.help_url),
+      contact_link: link_to(t('user_mailer.contact_link_text'), MarketingSite.contact_url))
