--- a/app/views/accounts/_verified_account_badge.html.slim
+++ b/app/views/accounts/_verified_account_badge.html.slim
@@ -1,5 +1,4 @@
-.sm-col.sm-col-4.mt1.sm-mt0.relative
-  .verification-badge.mx-auto
-    span
-      = image_tag asset_url('alert/success.svg'), width: 16, class: 'mr1 align-middle'
-      = t('headings.account.verified_account')
+span
+  = image_tag asset_url('alert/success.svg'), width: 16,
+  class: 'mr1 align-middle', id: 'verified_account_badge'
+  = t('headings.account.verified_account')
