--- a/app/views/two_factor_authentication/backup_code_verification/show.html.slim
+++ b/app/views/two_factor_authentication/backup_code_verification/show.html.slim
@@ -6,6 +6,7 @@ p.mt-tiny.mb0 = t('two_factor_authentication.backup_code_prompt')
 = simple_form_for(@backup_code_form, url: login_two_factor_backup_code_path,
   html: { autocomplete: 'off', method: :post, role: 'form' }) do |f|
   = render 'partials/backup_code/entry_fields', f: f, attribute_name: :backup_code
+  = hidden_field_tag 'ga_client_id', '', class: 'ga-client-id'
   = f.button :submit, t('forms.buttons.submit.default'), class: 'btn btn-primary'
 
 = render 'shared/fallback_links', presenter: @presenter
