--- a/app/views/two_factor_authentication/piv_cac_verification/show.html.slim
+++ b/app/views/two_factor_authentication/piv_cac_verification/show.html.slim
@@ -7,6 +7,7 @@ h1.h3.my0 = @presenter.header
   = link_to @presenter.piv_cac_capture_text,
                 @presenter.piv_cac_service_link,
                 class: 'btn btn-primary activate-spinner'
+  = hidden_field_tag 'ga_client_id', '', class: 'ga-client-id'
 = render 'shared/spinner'
 = render 'shared/fallback_links', presenter: @presenter
 = render 'shared/cancel', link: @presenter.cancel_link
