Allow users to disavow personal key sign ins
**Why**: To allow users to quickly change their password in response to a personal key sign ins

This commit also includes a refactor to move the code that alerts users to disavowable events into service classes

--- a/app/views/user_mailer/personal_key_sign_in.html.slim
+++ b/app/views/user_mailer/personal_key_sign_in.html.slim
@@ -12,5 +12,5 @@ table.hr
       | &nbsp;
 
 p == t('.help_html',
-        reset_password_url: forgot_password_url,
+        reset_password_url: event_disavowal_url(disavowal_token: @disavowal_token),
         account_url: account_url)
