LG-920 New IAL2 Account Recovery (#2814)
* LG-920 New IAL2 Account Recovery

**Why**: So verified users can recover their accounts if they lose their second factor.  This allows them to retain their UUID and not have to wait one day to delete their account like non-verified users.

**How**: Add a new recover flow which allows the user to re-verify their account through doc auth.

--- a/app/views/idv/doc_auth/doc_success.html.slim
+++ b/app/views/idv/doc_auth/doc_success.html.slim
@@ -6,7 +6,7 @@
 h1.h3.mb2.mt3.my0 = t('doc_auth.forms.doc_success')
 
 br
-= form_for('', url: idv_doc_auth_step_path(step: :doc_success), method: 'PUT',
+= form_for('', url: url_for, method: 'PUT',
         html: { autocomplete: 'off', role: 'form', class: 'mt2' }) do |f|
   - f.simple_fields_for :doc_auth do
     button type='submit' class='btn btn-primary btn-wide sm-col-6 col-12'
