--- a/app/views/users/phone_setup/index.html.slim
+++ b/app/views/users/phone_setup/index.html.slim
@@ -25,13 +25,7 @@ p.mt-tiny.mb0 = @presenter.info
     = f.button :submit, t('forms.buttons.send_security_code'),
         class: 'sm-col-6 col-12 btn-wide mb3 no-auto-enable'
 .mt2.pt1.border-top
-  ruby:
-    path = if TwoFactorAuthentication::PivCacPolicy.new(current_user).enabled?
-             account_recovery_setup_path
-           else
-             two_factor_options_path
-           end
-  = link_to t('two_factor_authentication.choose_another_option'), path
+  = link_to t('two_factor_authentication.choose_another_option'), two_factor_options_path
 
   = stylesheet_link_tag 'intl-tel-number/intlTelInput'
   = javascript_pack_tag 'intl-tel-input'
