LG-1071 Add remember device to webauthn
**Why**: So that webauthn users can use remember device

**How**: Break the webauthn verification flow into 2 steps. In the first step, the user presents their key. In the second step they choose to remember their device or not.

--- a/app/views/users/webauthn_setup/new.html.slim
+++ b/app/views/users/webauthn_setup/new.html.slim
@@ -22,6 +22,11 @@ div
     = text_field_tag :name, '', required: true, id: 'nickname',
           class: 'block col-12 field monospace', size: 16, maxlength: 20,
           'aria-labelledby': 'totp-label'
+    .border.border-light-blue.rounded-lg.px2.py1.mt3
+      = check_box_tag 'remember_device', true, false, class: 'mr1'
+      = label_tag 'remember_device',
+        t('forms.messages.remember_device'),
+        class: 'blue mt-1p'
     = submit_tag t('forms.buttons.submit.default'), id: 'submit-button', class: 'hidden'
   br
   = link_to t('forms.webauthn_setup.continue'), '#', method: :get,
