Clean up linting errors
**Why**: So `make lint` runs cleanly

This commit also moves `local-time.js` to be a vendored file so the linter won't run against it.

--- a/app/views/layouts/base.html.slim
+++ b/app/views/layouts/base.html.slim
@@ -23,7 +23,7 @@ html lang="#{I18n.locale}" class='no-js'
     <!--[if IE 8]>
       = javascript_include_tag 'es5-shim.min'
     <![endif]-->
-    == javascript_include_tag 'i18n-strings'
+    == javascript_include_tag 'application'
     == javascript_pack_tag 'application'
     == csrf_meta_tags
 
