--- a/app/views/shared/_cancel.html.slim
+++ b/app/views/shared/_cancel.html.slim
@@ -2,9 +2,6 @@
 
 .mt2.pt1.border-top
   - if user_signing_up?
-    = button_to cancel_link_text, sign_up_cancel_path, method: :get, class: 'btn btn-link'
-    = render 'shared/cancel_action_modal',
-      idv: user_verifying_identity?,
-      user_signing_up: user_signing_up?
+    = link_to cancel_link_text, sign_up_cancel_path, method: :get, class: 'btn btn-link'
   - else
     = link_to cancel_link_text, other_cancel, class: 'h5'
