LG-1007 Add an confirmation page to backup code regeneration
**Why**: So that the user will be aware that regenerating their backup codes blows away their old ones and have a chance to cancel

--- a/app/views/accounts/actions/_regenerate_backup_codes.html.slim
+++ b/app/views/accounts/actions/_regenerate_backup_codes.html.slim
@@ -1,4 +1,4 @@
-= link_to backup_code_setup_path do
+= link_to backup_code_regenerate_path do
   span.hide
     = t('forms.backup_code.title')
   = t('forms.backup_code.regenerate')
