LG-1100 Limit doc auth image retries/acuant calls
**Why**: To keep user data secure and prevent brute force attacks

**How**: Add a generic throttler table/class to handle a variety of throttling use cases and not have to continually add new fields to the user table.  Provide service classes to handle throttling. Add these throttles to the front and back image calls to Acuant.

--- a/app/views/idv/capture_doc/capture_mobile_back_image.html.slim
+++ b/app/views/idv/capture_doc/capture_mobile_back_image.html.slim
@@ -15,7 +15,7 @@ ul
     .sm-col.sm-col-9.px1
       = f.input :image, label: false, as: 'file', required: true
 
-  p = flow_session[:error_message]
+  p.red.bold = flow_session[:error_message]
 
   div id= 'target'
   br
